# beggle

./: 404.html  Cargo.toml  index.html  introduction.html  mechanics.html  print.html  searchindex.js  searchindex.json  views.html
.github/workflows/: deploy.yml
design-doc/: book.toml
design-doc/gh-pages/: 404.html  index.html  mechanics.html  print.html  searchindex.js  searchindex.json  views.html
design-doc/gh-pages/mechanics/: rpg_elements.html
design-doc/gh-pages/views/: main_menu.html
design-doc/src/: SUMMARY.md  introduction.md  mechanics.md  views.md
design-doc/src/mechanics/: rpg_elements.md
design-doc/src/views/: load_game_menu.md  main_menu.md  options_menu.md
mechanics/: rpg_elements.html
src/: ball_shooter.rs  game_over.rs  gui.rs  level_select.rs  levels.rs  main.rs  main_menu.rs  particles.rs  workarounds.rs
src/levels/: level1.rs
views/: load_game_menu.html  main_menu.html  options_menu.html
