[package]
name = "beggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
bevy_rapier2d = "0.12.1"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls", rev = "6cdec7e"}
fastrand = "1.7.0"
bevy_hanabi = { git = "https://github.com/djeedai/bevy_hanabi", rev = "0e1df4d", features = ["2d"] }

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3